# django-query-prefixer

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
django_query_prefixer/: __init__.py  cursor.py
django_query_prefixer/backends/mysql/: base.py
django_query_prefixer/backends/postgis/: base.py
django_query_prefixer/backends/postgresql/: base.py
django_query_prefixer/backends/sqlite3/: base.py
django_query_prefixer/middlewares/: __init__.py
example/example/: settings.py  urls.py
tests/: conftest.py  test_default_prefixer_fn.py  test_middlewares.py  test_set_and_get_prefixes.py
